syntax = "proto3";

option csharp_namespace = "Proto.V1";

import "base.proto";

message TransactionCreatedProto {
  BaseProto base = 1;
  string publicId = 5;
  string poPugId = 6;
  string money = 7;
  int32 type = 8;
}